Add dotenv + Auth route
